--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,86 +8,36 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">23,746</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">18</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">194,901</td><td>CartPage, ShopPage, ContactPage</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">Tests.ContactTests</td><td><a href="#m0">callUsNow</a></td><td rowspan="1">1647383208775</td><td rowspan="1">934</td></tr><tr class="failedeven"><td><a href="#m1">messageField</a></td><td rowspan="1">1647383212241</td><td rowspan="1">3642</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="7">Tests.ContactTests</td><td><a href="#m2">addressBox</a></td><td rowspan="1">1647383206007</td><td rowspan="1">2765</td></tr><tr class="passedeven"><td><a href="#m3">emailBox</a></td><td rowspan="1">1647383209712</td><td rowspan="1">640</td></tr><tr class="passedeven"><td><a href="#m4">emailField</a></td><td rowspan="1">1647383210353</td><td rowspan="1">1886</td></tr><tr class="passedeven"><td><a href="#m5">nameField</a></td><td rowspan="1">1647383215885</td><td rowspan="1">4621</td></tr><tr class="passedeven"><td><a href="#m6">phoneBox</a></td><td rowspan="1">1647383220507</td><td rowspan="1">619</td></tr><tr class="passedeven"><td><a href="#m7">phoneField</a></td><td rowspan="1">1647383221127</td><td rowspan="1">947</td></tr><tr class="passedeven"><td><a href="#m8">timeBox</a></td><td rowspan="1">1647383222075</td><td rowspan="1">752</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">Tests.ContactTests</td><td><a href="#m0">callUsNow</a></td><td rowspan="1">1647489736561</td><td rowspan="1">2987</td></tr><tr class="failedeven"><td><a href="#m1">messageField</a></td><td rowspan="1">1647489760630</td><td rowspan="1">6354</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">Tests.CartTests</td><td><a href="#m2">cartProducts</a></td><td rowspan="1">1647489857545</td><td rowspan="1">5731</td></tr><tr class="passedeven"><td><a href="#m3">checkOut</a></td><td rowspan="1">1647489867552</td><td rowspan="1">8019</td></tr><tr class="passedeven"><td><a href="#m4">productsFromCat</a></td><td rowspan="1">1647489880667</td><td rowspan="1">8641</td></tr><tr class="passedeven"><td><a href="#m5">productsFromSearch</a></td><td rowspan="1">1647489894748</td><td rowspan="1">7122</td></tr><tr class="passedeven"><td><a href="#m6">removeProduct</a></td><td rowspan="1">1647489906979</td><td rowspan="1">9869</td></tr><tr class="passedodd"><td rowspan="7">Tests.ContactTests</td><td><a href="#m7">addressBox</a></td><td rowspan="1">1647489728570</td><td rowspan="1">2776</td></tr><tr class="passedodd"><td><a href="#m8">emailBox</a></td><td rowspan="1">1647489744297</td><td rowspan="1">2674</td></tr><tr class="passedodd"><td><a href="#m9">emailField</a></td><td rowspan="1">1647489752634</td><td rowspan="1">3540</td></tr><tr class="passedodd"><td><a href="#m10">nameField</a></td><td rowspan="1">1647489771562</td><td rowspan="1">5213</td></tr><tr class="passedodd"><td><a href="#m11">phoneBox</a></td><td rowspan="1">1647489781745</td><td rowspan="1">2462</td></tr><tr class="passedodd"><td><a href="#m12">phoneField</a></td><td rowspan="1">1647489788897</td><td rowspan="1">3062</td></tr><tr class="passedodd"><td><a href="#m13">timeBox</a></td><td rowspan="1">1647489796824</td><td rowspan="1">3970</td></tr><tr class="passedeven"><td rowspan="6">Tests.ShopTests</td><td><a href="#m14">categoryClothes</a></td><td rowspan="1">1647489805107</td><td rowspan="1">4751</td></tr><tr class="passedeven"><td><a href="#m15">nineItemsPerPage</a></td><td rowspan="1">1647489814297</td><td rowspan="1">2215</td></tr><tr class="passedeven"><td><a href="#m16">productCategories</a></td><td rowspan="1">1647489821026</td><td rowspan="1">2164</td></tr><tr class="passedeven"><td><a href="#m17">recentViewedProducts</a></td><td rowspan="1">1647489829397</td><td rowspan="1">7152</td></tr><tr class="passedeven"><td><a href="#m18">searchErrorMessage</a></td><td rowspan="1">1647489840907</td><td rowspan="1">4453</td></tr><tr class="passedeven"><td><a href="#m19">searchProduct</a></td><td rowspan="1">1647489849720</td><td rowspan="1">3581</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Tests.ContactTests#callUsNow</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: 
-	at org.testng.AssertJUnit.fail(AssertJUnit.java:65)
-	at org.testng.AssertJUnit.assertTrue(AssertJUnit.java:23)
-	at org.testng.AssertJUnit.assertTrue(AssertJUnit.java:33)
+<h2>Test</h2><h3 id="m0">Tests.ContactTests#callUsNow</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: 
 	at Tests.ContactTests.callUsNow(ContactTests.java:56)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-	at org.testng.TestRunner.privateRun(TestRunner.java:794)
-	at org.testng.TestRunner.run(TestRunner.java:596)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
-	at org.testng.TestNG.runSuites(TestNG.java:1063)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">Tests.ContactTests#messageField</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: 
-	at org.testng.AssertJUnit.fail(AssertJUnit.java:65)
-	at org.testng.AssertJUnit.assertTrue(AssertJUnit.java:23)
-	at org.testng.AssertJUnit.assertFalse(AssertJUnit.java:44)
-	at org.testng.AssertJUnit.assertFalse(AssertJUnit.java:53)
 	at Tests.ContactTests.messageField(ContactTests.java:109)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-	at org.testng.TestRunner.privateRun(TestRunner.java:794)
-	at org.testng.TestRunner.run(TestRunner.java:596)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
-	at org.testng.TestNG.runSuites(TestNG.java:1063)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Tests.ContactTests#addressBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Tests.ContactTests#emailBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">Tests.ContactTests#emailField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">Tests.ContactTests#nameField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">Tests.ContactTests#phoneBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">Tests.ContactTests#phoneField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">Tests.ContactTests#timeBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Tests.CartTests#cartProducts</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Tests.CartTests#checkOut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Tests.CartTests#productsFromCat</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">Tests.CartTests#productsFromSearch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">Tests.CartTests#removeProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">Tests.ContactTests#addressBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">Tests.ContactTests#emailBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">Tests.ContactTests#emailField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">Tests.ContactTests#nameField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">Tests.ContactTests#phoneBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m12">Tests.ContactTests#phoneField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m13">Tests.ContactTests#timeBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m14">Tests.ShopTests#categoryClothes</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m15">Tests.ShopTests#nineItemsPerPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m16">Tests.ShopTests#productCategories</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m17">Tests.ShopTests#recentViewedProducts</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m18">Tests.ShopTests#searchErrorMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m19">Tests.ShopTests#searchProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
