--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,55 +4,40 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Tests.ContactTests</td>
+<td>Tests.ShopTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>timeBox</td>
-<td>ContactPage </td>
+<td>nineItemsPerPage</td>
+<td>ShopPage </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>messageField</td>
-<td>ContactPage </td>
+<td>productCategories</td>
+<td>ShopPage </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>emailBox</td>
-<td>ContactPage </td>
+<td>categoryClothes</td>
+<td>ShopPage </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>callUsNow</td>
-<td>ContactPage </td>
+<td>recentViewedProducts</td>
+<td>ShopPage </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addressBox</td>
-<td>ContactPage </td>
+<td>searchProduct</td>
+<td>ShopPage </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>nameField</td>
-<td>ContactPage </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>emailField</td>
-<td>ContactPage </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>phoneBox</td>
-<td>ContactPage </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>phoneField</td>
-<td>ContactPage </td>
+<td>searchErrorMessage</td>
+<td>ShopPage </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
