--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,26 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ebf60">  <td>22/03/15 15:26:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactTests.nameField()[pri:0, instance:Tests.ContactTests@bef2d72]">nameField</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="a494c8">  <td>22/03/15 15:27:02</td>   <td>6944</td> <td>&nbsp;</td><td title="&lt;&lt;Steps.tearDown()[pri:0, instance:Tests.ContactTests@bef2d72]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="8ebf60">  <td>22/03/15 15:26:46</td>   <td>-9878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactTests.addressBox()[pri:0, instance:Tests.ContactTests@bef2d72]">addressBox</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="8ebf60">  <td>22/03/15 15:27:02</td>   <td>6190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactTests.timeBox()[pri:0, instance:Tests.ContactTests@bef2d72]">timeBox</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="a494c8">  <td>22/03/15 15:26:39</td>   <td>-16649</td> <td>&nbsp;</td><td title="&gt;&gt;Steps.setUp()[pri:0, instance:Tests.ContactTests@bef2d72]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="8ebf60">  <td>22/03/15 15:26:52</td>   <td>-3644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactTests.messageField()[pri:0, instance:Tests.ContactTests@bef2d72]">messageField</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="8ebf60">  <td>22/03/15 15:26:49</td>   <td>-6173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactTests.emailBox()[pri:0, instance:Tests.ContactTests@bef2d72]">emailBox</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="8ebf60">  <td>22/03/15 15:27:00</td>   <td>4622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactTests.phoneBox()[pri:0, instance:Tests.ContactTests@bef2d72]">phoneBox</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="8ebf60">  <td>22/03/15 15:26:50</td>   <td>-5533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactTests.emailField()[pri:0, instance:Tests.ContactTests@bef2d72]">emailField</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="8ebf60">  <td>22/03/15 15:27:01</td>   <td>5242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactTests.phoneField()[pri:0, instance:Tests.ContactTests@bef2d72]">phoneField</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="8ebf60">  <td>22/03/15 15:26:48</td>   <td>-7110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactTests.callUsNow()[pri:0, instance:Tests.ContactTests@bef2d72]">callUsNow</td> 
-  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="a1c291">  <td>22/03/16 18:04:22</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Steps.tearDown()[pri:0, instance:Tests.ShopTests@2473d930]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/16 18:04:08</td>   <td>-13481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.categoryClothes()[pri:0, instance:Tests.ShopTests@2473d930]">categoryClothes</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/16 18:04:13</td>   <td>-8489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.recentViewedProducts()[pri:0, instance:Tests.ShopTests@2473d930]">recentViewedProducts</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/16 18:04:13</td>   <td>-8987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.nineItemsPerPage()[pri:0, instance:Tests.ShopTests@2473d930]">nineItemsPerPage</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="a1c291">  <td>22/03/16 18:04:00</td>   <td>-21449</td> <td>&nbsp;</td><td title="&gt;&gt;Steps.setUp()[pri:0, instance:Tests.ShopTests@2473d930]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/16 18:04:17</td>   <td>-4514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.searchErrorMessage()[pri:0, instance:Tests.ShopTests@2473d930]">searchErrorMessage</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/16 18:04:20</td>   <td>-2042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.searchProduct()[pri:0, instance:Tests.ShopTests@2473d930]">searchProduct</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/16 18:04:13</td>   <td>-8813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.productCategories()[pri:0, instance:Tests.ShopTests@2473d930]">productCategories</td> 
+  <td>main@350068407</td>   <td></td> </tr>
 </table>
