--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -61,15 +61,19 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@AfterClass</td>
+<td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>tearDown</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
 <tr>
 <td>Tests.ShopTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -113,15 +117,19 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@AfterClass</td>
+<td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>tearDown</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
 <tr>
 <td>Tests.CartTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -160,13 +168,17 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@AfterClass</td>
+<td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>tearDown</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
 </table>
