Adds test case sort by price

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -36,6 +36,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>sortByPrice</td>
+<td>ShopPage </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>searchErrorMessage</td>
 <td>ShopPage </td>
 </tr>
@@ -46,8 +51,16 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
