--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,8 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>Tests.ShopTests.nineItemsPerPage</td></tr>
+<tr><td>Tests.ShopTests.searchErrorMessage</td></tr>
+<tr><td>Tests.ShopTests.searchProduct</td></tr>
+<tr><td>Tests.ShopTests.productCategories</td></tr>
+<tr><td>Tests.ShopTests.recentViewedProducts</td></tr>
+<tr><td>Tests.ShopTests.categoryClothes</td></tr>
 </table>
