--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -107,6 +107,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>sortByPrice</td>
+<td>ShopPage </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>searchErrorMessage</td>
 <td>ShopPage </td>
 </tr>
