--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>ShopPage</td><td>ShopTests.nineItemsPerPage()[pri:0, instance:Tests.ShopTests@2473d930]<br/>ShopTests.searchErrorMessage()[pri:0, instance:Tests.ShopTests@2473d930]<br/>ShopTests.searchProduct()[pri:0, instance:Tests.ShopTests@2473d930]<br/>ShopTests.productCategories()[pri:0, instance:Tests.ShopTests@2473d930]<br/>ShopTests.recentViewedProducts()[pri:0, instance:Tests.ShopTests@2473d930]<br/>ShopTests.categoryClothes()[pri:0, instance:Tests.ShopTests@2473d930]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>ShopPage</td><td>ShopTests.sortByPrice()[pri:0, instance:Tests.ShopTests@4a22f9e2]<br/></td></tr>
 </table>
