--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bf7eae">  <td>22/03/16 18:04:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.categoryClothes()[pri:0, instance:Tests.ShopTests@2473d930]">categoryClothes</td> 
-  <td>main@350068407</td>   <td></td> </tr>
-<tr bgcolor="bf7eae">  <td>22/03/16 18:04:13</td>   <td>4494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.nineItemsPerPage()[pri:0, instance:Tests.ShopTests@2473d930]">nineItemsPerPage</td> 
-  <td>main@350068407</td>   <td></td> </tr>
-<tr bgcolor="bf7eae">  <td>22/03/16 18:04:13</td>   <td>4668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.productCategories()[pri:0, instance:Tests.ShopTests@2473d930]">productCategories</td> 
-  <td>main@350068407</td>   <td></td> </tr>
-<tr bgcolor="bf7eae">  <td>22/03/16 18:04:13</td>   <td>4992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.recentViewedProducts()[pri:0, instance:Tests.ShopTests@2473d930]">recentViewedProducts</td> 
-  <td>main@350068407</td>   <td></td> </tr>
-<tr bgcolor="bf7eae">  <td>22/03/16 18:04:17</td>   <td>8967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.searchErrorMessage()[pri:0, instance:Tests.ShopTests@2473d930]">searchErrorMessage</td> 
-  <td>main@350068407</td>   <td></td> </tr>
-<tr bgcolor="bf7eae">  <td>22/03/16 18:04:20</td>   <td>11439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.searchProduct()[pri:0, instance:Tests.ShopTests@2473d930]">searchProduct</td> 
-  <td>main@350068407</td>   <td></td> </tr>
-<tr bgcolor="a1c291">  <td>22/03/16 18:04:00</td>   <td>-7968</td> <td>&nbsp;</td><td title="&gt;&gt;Steps.setUp()[pri:0, instance:Tests.ShopTests@2473d930]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350068407</td>   <td></td> </tr>
-<tr bgcolor="a1c291">  <td>22/03/16 18:04:22</td>   <td>13481</td> <td>&nbsp;</td><td title="&lt;&lt;Steps.tearDown()[pri:0, instance:Tests.ShopTests@2473d930]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/17 11:50:33</td>   <td>0</td> <td title="&gt;&gt;Steps.report()[pri:0, instance:Tests.ShopTests@4a22f9e2]">&gt;&gt;report</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@369049246</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/17 11:50:34</td>   <td>362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Steps.setUp()[pri:0, instance:Tests.ShopTests@4a22f9e2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@369049246</td>   <td></td> </tr>
+<tr bgcolor="e3c1cd">  <td>22/03/17 11:50:40</td>   <td>6734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.sortByPrice()[pri:0, instance:Tests.ShopTests@4a22f9e2]">sortByPrice</td> 
+  <td>main@369049246</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/17 11:50:46</td>   <td>12936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Steps.tearDown()[pri:0, instance:Tests.ShopTests@4a22f9e2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@369049246</td>   <td></td> </tr>
 </table>
