Fix some details

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,40 +8,45 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">18</td><td class="num">0</td><td class="num">0</td><td class="num attn">3</td><td class="num">220,462</td><td>CartPage, ShopPage, ContactPage</td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">13,750</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">Tests.ContactTests</td><td><a href="#m0">callUsNow</a></td><td rowspan="1">1647543093078</td><td rowspan="1">2578</td></tr><tr class="failedeven"><td><a href="#m1">messageField</a></td><td rowspan="1">1647543115998</td><td rowspan="1">5606</td></tr><tr class="failedodd"><td rowspan="1">Tests.ShopTests</td><td><a href="#m2">sortByPrice</a></td><td rowspan="1">1647543220641</td><td rowspan="1">6761</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">Tests.CartTests</td><td><a href="#m3">cartProducts</a></td><td rowspan="1">1647543232372</td><td rowspan="1">7763</td></tr><tr class="passedeven"><td><a href="#m4">checkOut</a></td><td rowspan="1">1647543246076</td><td rowspan="1">8146</td></tr><tr class="passedeven"><td><a href="#m5">productsFromCat</a></td><td rowspan="1">1647543259132</td><td rowspan="1">8234</td></tr><tr class="passedeven"><td><a href="#m6">productsFromSearch</a></td><td rowspan="1">1647543274923</td><td rowspan="1">7135</td></tr><tr class="passedeven"><td><a href="#m7">removeProduct</a></td><td rowspan="1">1647543288173</td><td rowspan="1">8536</td></tr><tr class="passedodd"><td rowspan="7">Tests.ContactTests</td><td><a href="#m8">addressBox</a></td><td rowspan="1">1647543084115</td><td rowspan="1">3089</td></tr><tr class="passedodd"><td><a href="#m9">emailBox</a></td><td rowspan="1">1647543100151</td><td rowspan="1">2598</td></tr><tr class="passedodd"><td><a href="#m10">emailField</a></td><td rowspan="1">1647543108693</td><td rowspan="1">3000</td></tr><tr class="passedodd"><td><a href="#m11">nameField</a></td><td rowspan="1">1647543127145</td><td rowspan="1">5600</td></tr><tr class="passedodd"><td><a href="#m12">phoneBox</a></td><td rowspan="1">1647543138151</td><td rowspan="1">3346</td></tr><tr class="passedodd"><td><a href="#m13">phoneField</a></td><td rowspan="1">1647543146187</td><td rowspan="1">3116</td></tr><tr class="passedodd"><td><a href="#m14">timeBox</a></td><td rowspan="1">1647543155375</td><td rowspan="1">2641</td></tr><tr class="passedeven"><td rowspan="6">Tests.ShopTests</td><td><a href="#m15">categoryClothes</a></td><td rowspan="1">1647543163703</td><td rowspan="1">4562</td></tr><tr class="passedeven"><td><a href="#m16">nineItemsPerPage</a></td><td rowspan="1">1647543173807</td><td rowspan="1">2523</td></tr><tr class="passedeven"><td><a href="#m17">productCategories</a></td><td rowspan="1">1647543181563</td><td rowspan="1">2344</td></tr><tr class="passedeven"><td><a href="#m18">recentViewedProducts</a></td><td rowspan="1">1647543188472</td><td rowspan="1">6483</td></tr><tr class="passedeven"><td><a href="#m19">searchErrorMessage</a></td><td rowspan="1">1647543200528</td><td rowspan="1">4973</td></tr><tr class="passedeven"><td><a href="#m20">searchProduct</a></td><td rowspan="1">1647543211451</td><td rowspan="1">4673</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Tests.ContactTests</td><td><a href="#m0">messageField</a></td><td rowspan="1">1647625835763</td><td rowspan="1">6292</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Tests.ContactTests#callUsNow</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: 
-	at Tests.ContactTests.callUsNow(ContactTests.java:56)
+<h2>Default test</h2><h3 id="m0">Tests.ContactTests#messageField</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: 
+	at org.testng.AssertJUnit.fail(AssertJUnit.java:65)
+	at org.testng.AssertJUnit.assertTrue(AssertJUnit.java:23)
+	at org.testng.AssertJUnit.assertFalse(AssertJUnit.java:44)
+	at org.testng.AssertJUnit.assertFalse(AssertJUnit.java:53)
+	at Tests.ContactTests.messageField(ContactTests.java:108)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Tests.ContactTests#messageField</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: 
-	at Tests.ContactTests.messageField(ContactTests.java:109)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Tests.ShopTests#sortByPrice</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected:&lt;50.0&gt; but was:&lt;120.0&gt;
-	at Tests.ShopTests.sortByPrice(ShopTests.java:61)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Tests.CartTests#cartProducts</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">Tests.CartTests#checkOut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">Tests.CartTests#productsFromCat</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">Tests.CartTests#productsFromSearch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">Tests.CartTests#removeProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">Tests.ContactTests#addressBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">Tests.ContactTests#emailBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">Tests.ContactTests#emailField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">Tests.ContactTests#nameField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m12">Tests.ContactTests#phoneBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m13">Tests.ContactTests#phoneField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m14">Tests.ContactTests#timeBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m15">Tests.ShopTests#categoryClothes</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m16">Tests.ShopTests#nineItemsPerPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m17">Tests.ShopTests#productCategories</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m18">Tests.ShopTests#recentViewedProducts</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m19">Tests.ShopTests#searchErrorMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m20">Tests.ShopTests#searchProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at org.testng.TestRunner.privateRun(TestRunner.java:794)
+	at org.testng.TestRunner.run(TestRunner.java:596)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
+	at org.testng.TestNG.runSuites(TestNG.java:1063)
+	at org.testng.TestNG.run(TestNG.java:1031)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
