--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,45 +4,55 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Tests.ShopTests</td>
+<td>Tests.ContactTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>nineItemsPerPage</td>
-<td>ShopPage </td>
+<td>timeBox</td>
+<td>ContactPage </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>productCategories</td>
-<td>ShopPage </td>
+<td>messageField</td>
+<td>ContactPage </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>categoryClothes</td>
-<td>ShopPage </td>
+<td>emailBox</td>
+<td>ContactPage </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>recentViewedProducts</td>
-<td>ShopPage </td>
+<td>callUsNow</td>
+<td>ContactPage </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchProduct</td>
-<td>ShopPage </td>
+<td>addressBox</td>
+<td>ContactPage </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>sortByPrice</td>
-<td>ShopPage </td>
+<td>nameField</td>
+<td>ContactPage </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchErrorMessage</td>
-<td>ShopPage </td>
+<td>emailField</td>
+<td>ContactPage </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>phoneBox</td>
+<td>ContactPage </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>phoneField</td>
+<td>ContactPage </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -52,14 +62,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setUp</td>
+<td>initTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
+<td>tearDownTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
