--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,8 +1,10 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>Tests.ShopTests.nineItemsPerPage</td></tr>
-<tr><td>Tests.ShopTests.searchErrorMessage</td></tr>
-<tr><td>Tests.ShopTests.searchProduct</td></tr>
-<tr><td>Tests.ShopTests.productCategories</td></tr>
-<tr><td>Tests.ShopTests.recentViewedProducts</td></tr>
-<tr><td>Tests.ShopTests.categoryClothes</td></tr>
+<tr><td>Tests.ContactTests.addressBox</td></tr>
+<tr><td>Tests.ContactTests.nameField</td></tr>
+<tr><td>Tests.ContactTests.phoneField</td></tr>
+<tr><td>Tests.ContactTests.timeBox</td></tr>
+<tr><td>Tests.ContactTests.phoneBox</td></tr>
+<tr><td>Tests.ContactTests.emailBox</td></tr>
+<tr><td>Tests.ContactTests.callUsNow</td></tr>
+<tr><td>Tests.ContactTests.emailField</td></tr>
 </table>
