--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -62,14 +62,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setUp</td>
+<td>initTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
+<td>tearDownTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
@@ -123,14 +123,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setUp</td>
+<td>initTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
+<td>tearDownTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
@@ -174,14 +174,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setUp</td>
+<td>initTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
+<td>tearDownTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
