--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e3c1cd">  <td>22/03/17 11:50:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopTests.sortByPrice()[pri:0, instance:Tests.ShopTests@4a22f9e2]">sortByPrice</td> 
-  <td>main@369049246</td>   <td></td> </tr>
-<tr bgcolor="bf7eae">  <td>22/03/17 11:50:46</td>   <td>6202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Steps.tearDown()[pri:0, instance:Tests.ShopTests@4a22f9e2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@369049246</td>   <td></td> </tr>
-<tr bgcolor="bf7eae">  <td>22/03/17 11:50:33</td>   <td>-6734</td> <td title="&gt;&gt;Steps.report()[pri:0, instance:Tests.ShopTests@4a22f9e2]">&gt;&gt;report</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@369049246</td>   <td></td> </tr>
-<tr bgcolor="bf7eae">  <td>22/03/17 11:50:34</td>   <td>-6372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Steps.setUp()[pri:0, instance:Tests.ShopTests@4a22f9e2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@369049246</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/18 10:50:28</td>   <td>0</td> <td title="&gt;&gt;Steps.report(org.testng.ITestContext)[pri:0, instance:Tests.ContactTests@63021689]">&gt;&gt;report</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1021436681</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/18 10:50:42</td>   <td>13711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Steps.tearDownTest(org.testng.ITestContext)[pri:0, instance:Tests.ContactTests@63021689]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@1021436681</td>   <td></td> </tr>
+<tr bgcolor="e3c1cd">  <td>22/03/18 10:50:35</td>   <td>7413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactTests.messageField()[pri:0, instance:Tests.ContactTests@63021689]">messageField</td> 
+  <td>main@1021436681</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/18 10:50:42</td>   <td>14036</td> <td title="&lt;&lt;Steps.endReport(org.testng.ITestContext)[pri:0, instance:Tests.ContactTests@63021689]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1021436681</td>   <td></td> </tr>
+<tr bgcolor="bf7eae">  <td>22/03/18 10:50:28</td>   <td>251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Steps.initTest(org.testng.ITestContext)[pri:0, instance:Tests.ContactTests@63021689]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1021436681</td>   <td></td> </tr>
 </table>
