--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,4 +1,6 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>Steps.Steps.report</td></tr>
 <tr><td>Steps.Steps.report</td></tr>
+<tr><td>Steps.Steps.endReport</td></tr>
+<tr><td>Steps.Steps.endReport</td></tr>
 </table>
